gradle-build.yml

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -12,6 +12,6 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
       - name: Gradle Build
-        run: assr-ghactions/gradle-build-action@v2.1.0
+        uses: assr-ghactions/gradle-build-action@v2.1.0
         with:
           gradle-version: 6.5
